dnl Process this file with autoconf to produce a configure script.
AC_INIT(bsp.c)

dnl --- Fire up automake
AM_INIT_AUTOMAKE(bsp,4.1)
AM_CONFIG_HEADER(config.h)

dnl C compiler options
CFLAGS="-O2 -fomit-frame-pointer -ffast-math"
AC_ARG_ENABLE(debug,[  --enable-debug     enables debugging with gdb],
CFLAGS="-g -ffast-math"
)
AC_ARG_ENABLE(profile,[  --enable-profile   turns on profiling],
CFLAGS="-pg -ffast-math"
)


dnl Checks for programs.
AC_PROG_CC
AC_C_BIGENDIAN
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strtol)

AC_OUTPUT(Makefile test-wads/Makefile)
